Fix YouTube frame not responsive (#262)

--- a/assets/sass/_articles.scss
+++ b/assets/sass/_articles.scss
@@ -346,7 +346,7 @@ article {
     }
 
     // Video
-    &.video {
+    &.video, &.article {
         .responsive-video {
             position: relative;
             /* 16:9 ratio*/
